# test-os

./: .gitignore  CMakeLists.txt  Makefile
boot/: boot_sector.asm
boot/utils/: disk.asm  print.asm  print32.asm
kernel/: kernel.c
kernel/drivers/: ports.c  ports.h  vga.c  vga.h
kernel/libc/: types.h
